----------------------------------------------------------------------
 OmegaT 5.4.3
----------------------------------------------------------------------
  0 Enhancements
  0 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.4.3 vs 5.4.2


----------------------------------------------------------------------
 OmegaT 5.4.2 (2021-03-25)
----------------------------------------------------------------------
  1 Enhancement
  1 Bug fix
  0 Localisation updates
----------------------------------------------------------------------
5.4.2 vs 5.4.1

  Implemented requests:

  - Support DeepL V2 API
  https://sourceforge.net/p/omegat/feature-requests/1560/

  Bug fixes:

  - SVN team project files disappear
  Fixed by reverting "Sync file deletions from repository to project" (#1499)
  for SVN repos.
  https://sourceforge.net/p/omegat/bugs/1036/

----------------------------------------------------------------------
 OmegaT 5.4.1 (2020-12-15)
----------------------------------------------------------------------
  0 Enhancements
  1 Bug fix
  0 Localisation updates
----------------------------------------------------------------------
5.4.1 vs 5.4.0

  Bug fixes:

  - Default color for untranslated segments is wrong
  https://sourceforge.net/p/omegat/bugs/1031/

----------------------------------------------------------------------
 OmegaT 5.4.0 (2020-12-12)
----------------------------------------------------------------------
  7 Enhancements
  6 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.4.0 vs 5.3.0

  Implemented requests:

  - Sync file deletions from repository to project
  https://sourceforge.net/p/omegat/feature-requests/1499/

  - Show branding in About dialog
  https://sourceforge.net/p/omegat/feature-requests/1511/

  - XLIFF: update target tag's state attribute according to
    translation status