@@ -2,11 +2,15 @@
  OmegaT 5.4.3
 ----------------------------------------------------------------------
   0 Enhancements
-  0 Bug fixes
+  1 Bug fix
   0 Localisation updates
 ----------------------------------------------------------------------
 5.4.3 vs 5.4.2
 
+  Bug fixes:
+
+  - Revert move to DeepL V2 API
+  https://sourceforge.net/p/omegat/bugs/1040/
 
 ----------------------------------------------------------------------
  OmegaT 5.4.2 (2021-03-25)
